--- a/views/logIn.ejs
+++ b/views/logIn.ejs
@@ -2,5 +2,5 @@
 <form action="/login" method="POST">
    USER <input type="text" name="username">
    PASSWORD <input type="password" name="password">
-   <button type="submit"> Submit </button>
+   <button type="submit"> login </button>
 </form>
