--- a/views/logIn.ejs
+++ b/views/logIn.ejs
@@ -1,4 +1,6 @@
 <h1> Login </h1>
+<%= messages.error %> 
+<%= error %> 
 <form action="/login" method="POST">
    USER <input type="text" name="username">
    PASSWORD <input type="password" name="password">
