--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,6 @@
 <h1>Sign UP</h1>
+<%= error %> 
+
 <form action="/signup" method="POST">
   USER <input type="text" name="username" /> PASSWORD
   <input type="password" name="password" />
